# claspy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
claspy/: clap.py  clasp.py  data_loader.py  distance.py  nearest_neighbour.py  scoring.py  segmentation.py  state_detection.py  utils.py  validation.py  window_size.py
claspy/notebooks/: clasp_configuration.ipynb  has_evaluation.ipynb  streaming_time_series.ipynb  tssb_evaluation.ipynb  window_size_selection.ipynb
claspy/streaming/: clasp.py  nearest_neighbour.py  segmentation.py
claspy/tests/: clap_test.py  clasp_test.py  data_loader_test.py  evaluation.py  nearest_neighbour_test.py  segmentation_test.py  state_detection_test.py  streaming_clasp_test.py  streaming_nearest_neighbour_test.py  streaming_segmentation_test.py  tssb_data_loader.py  window_size_test.py
