[project]
name = "claspy"

version = "0.1.1"

description = ""
readme = "README.md"
authors = [
    {name = "Arik Ermshaus", email = "ermshaua@informatik.hu-berlin.de"}
]
keywords = [
    "machine-learning",
    "time-series",
    "unsupervised-learning",
    "segmentation",
    "change-points"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
requires-python = ">=3.7,<3.11"
dependencies = [
    "numpy~=1.23.5",
    "numba~=0.56.4",
    "pandas~=1.5.2",
    "importlib_metadata~=4.11.3",
    "matplotlib~=3.6.2",
    "scikit-learn~=1.2.1",
    "scipy~=1.10.0",
    "statsmodels~=0.13.5"
]

[project.urls]
repository = "https://github.com/ermshaua/claspy"
#documentation = ""
#download = ""

[project.license]
file = "LICENSE"

[build-system]
requires = ["setuptools", "wheel", "toml", "build"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
