[project]
name = "claspy"

version = "0.2.2"

description = ""
readme = "README.md"
authors = [
    {name = "Arik Ermshaus", email = "ermshaua@informatik.hu-berlin.de"}
]
keywords = [
    "machine-learning",
    "time-series",
    "unsupervised-learning",
    "segmentation",
    "change-points"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.7,<3.12"
dependencies = [
    "numpy>=1.21.0,<1.25",
    "numba>=0.53",
    "pandas>=1.1.0,<1.6.0",
    "scikit-learn>=0.24.0,<1.3.0",
    "scipy<2.0.0,>=1.2.0",
    "statsmodels>=0.13.5",
    "matplotlib>=3.3"
]

[project.urls]
repository = "https://github.com/ermshaua/claspy"
#documentation = ""
#download = ""

[project.license]
file = "LICENSE"

[build-system]
requires = ["setuptools", "wheel", "toml", "build"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
